Terraform (Level1)/Create Security Group Using Terraform/security_group.tf
resource "aws_security_group" "devops-sg" {
  name        = "devops-sg"
  description = "Security group for Nautilus App Servers"

  tags = {
    Name = "devops-sg"
  }

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}
